--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 			</div>
 			<form class="message-creator" ng-controller="MessageCreatorCtrl">
 			  <div class="form-group">
-			    <textarea required class="form-control message-input" ng-model="newMessage" ctrl-enter-break-line="createMessage()" placeholder="Ctrl+Enter to quick send"></textarea>
+			    <textarea required class="form-control message-input" ng-model="newMessage" ctrl-enter-break-line="createMessage()" placeholder="Ctrl+Enter to break line"></textarea>
 			  </div>
 			</form>
 		  </div>
