--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
 		</div>
 	  </div>
 	</nav>
-	<div class="container-fluid" id="main-container" style="margin-top:100px">
-	  <div class="col-md-8 col-sm-10 col-md-offset-2 col-sm-offset-1" id="main">
+	<div class="container-fluid" style="margin-top:100px">
+	  <div class="col-md-8 col-sm-10 col-md-offset-2 col-sm-offset-1">
 		<div class="panel panel-default room" ng-controller="RoomCtrl">
 		  <div class="panel-heading room-header">
 			<h3 class="panel-title">Ace IM</h3>
