--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 			<div class="messages list-group" auto-scroll-to-bottom>
 			  <div class="list-group-item message" ng-repeat="message in share.messages track by $index">
 			    {{message.from}}: {{message.content}}
-			    <time am-time-ago="message.createAt"></time>
+			    <span am-time-ago="message.createAt"></span>
 			  </div>
 			</div>
 			<form class="message-creator" ng-controller="MessageCreatorCtrl">
