--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,6 @@
     <script src="/renders/angular/angular.min.js"></script>
     <script src="/renders/moment/moment.js"></script>
     <script src="/renders/angular-moment/angular-moment.min.js"></script>
-    <script src="/renders/moment/locale/zh-cn.js"></script>
   </head>
   <body>
   	<nav class="navbar navbar-inverse navbar-fixed-top">
@@ -46,7 +45,7 @@
 			<div class="messages list-group" auto-scroll-to-bottom>
 			  <div class="list-group-item message" ng-repeat="message in share.messages track by $index">
 			    {{message.from}}: {{message.content}}
-			    <span am-time-ago="message.createAt"></span>
+			    <span am-time-ago="message.createAt" class="pull-right"></span>
 			  </div>
 			</div>
 			<form class="message-creator" ng-controller="MessageCreatorCtrl">
