--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
 		  <div class="panel-body room-content">
 			<div class="messages list-group" auto-scroll-to-bottom>
 			  <div class="list-group-item message" ng-repeat="message in share.messages track by $index">
-			    <p><kbd>{{message.from}}:</kbd> {{message.content}}</p>
-			    <span am-time-ago="message.createAt" class="pull-right"></span>
+			    <kbd>{{message.from}}:</kbd><span am-time-ago="message.createAt" class="pull-right"></span>
+				<p>{{message.content}}</p>
 			  </div>
 			</div>
 			<form class="message-creator" ng-controller="MessageCreatorCtrl">
