--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title ng-controller="TitleCtrl">Ace IM</title>
+    <title>Ace IM</title>
 
     <!-- Bootstrap -->
     <link href="/renders/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -26,6 +26,7 @@
     <script src="/renders/angular/angular.min.js"></script>
     <script src="/renders/moment/moment.js"></script>
     <script src="/renders/angular-moment/angular-moment.min.js"></script>
+	<script src="/renders/iNotify.min.js"></script>
   </head>
   <body>
   	<nav class="navbar navbar-inverse navbar-fixed-top">
