--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <script src="/renders/jquery/dist/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/renders/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="/renders/iNotify.min.js"></script>
+	<script src="/renders/iNotify.js"></script>
     <script src="/renders/angular/angular.min.js"></script>
     <script src="/renders/moment/moment.js"></script>
     <script src="/renders/angular-moment/angular-moment.min.js"></script>
