--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 			<div class="messages list-group" auto-scroll-to-bottom>
 			  <div class="list-group-item message" ng-repeat="message in share.messages track by $index">
 			    <p><kbd>{{message.from}}:</kbd><span am-time-ago="message.createAt" class="pull-right"></span></p>
-				<p>{{message.content}}</p>
+				<pre>{{message.content}}</pre>
 			  </div>
 			</div>
 			<form class="message-creator" ng-controller="MessageCreatorCtrl">
