--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/renders/jquery/dist/jquery.min.js"></script>
+    <script src="/renders/jquery/dist/jquery.cookie.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/renders/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="/renders/iNotify.js"></script>
