--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 		</div>
 	  </div>
 	</nav>
-	<div class="container-fluid" id="main" style="margin-top:100px">
+	<div class="container-fluid" style="margin-top:100px">
 	  <div class="col-md-8 col-sm-10 col-md-offset-2 col-sm-offset-1">
 		<div class="panel panel-default room" ng-controller="RoomCtrl">
 		  <div class="panel-heading room-header">
