--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,7 @@
 			<form class="message-creator" ng-controller="MessageCreatorCtrl">
 			  <div class="form-group">
 			    <textarea required class="form-control message-input" ng-model="newMessage" ctrl-enter-break-line="createMessage()" placeholder="Ctrl+Enter to break line"></textarea>
+				<button class="btn btn-primary visible-*-block" onclick="createMessage()">send</button>
 			  </div>
 			</form>
 		  </div>
