--- a/public/index.html
+++ b/public/index.html
@@ -51,9 +51,9 @@
 			  </div>
 			</div>
 			<form class="message-creator" ng-controller="MessageCreatorCtrl">
-			  <div class="form-group">
+			  <div class="form-group form-inline">
 			    <textarea required class="form-control message-input" ng-model="newMessage" ctrl-enter-break-line="createMessage()" placeholder="Ctrl+Enter to break line"></textarea>
-				<button class="btn btn-primary visible-*-block" onclick="createMessage()">send</button>
+				<button class="btn btn-primary hidden-xs" onclick="createMessage()">send</button>
 			  </div>
 			</form>
 		  </div>
