--- a/public/index.html
+++ b/public/index.html
@@ -51,9 +51,12 @@
 			  </div>
 			</div>
 			<form class="message-creator" ng-controller="MessageCreatorCtrl">
-			  <div class="form-group form-inline">
+			  <div class="form-group">
 			    <textarea required class="form-control message-input" ng-model="newMessage" ctrl-enter-break-line="createMessage()" placeholder="Ctrl+Enter to break line"></textarea>
-				<button class="btn btn-primary visible-xs-block" onclick="createMessage()">send</button>
+			  </div>
+			  <div class="form-group visible-xs-block form-inline">
+			    <input type="text" required class="form-control message-input" ng-model="newMessage" placeholder="message here" />
+				<button class="btn btn-primary " onclick="createMessage()">send</button>
 			  </div>
 			</form>
 		  </div>
