--- a/public/index.html
+++ b/public/index.html
@@ -50,13 +50,15 @@
 				<pre>{{message.content}}</pre>
 			  </div>
 			</div>
-			<form class="message-creator" ng-controller="MessageCreatorCtrl">
+			<form class="message-creator hidden-xs" ng-controller="MessageCreatorCtrl">
 			  <div class="form-group">
 			    <textarea required class="form-control message-input" ng-model="newMessage" ctrl-enter-break-line="createMessage()" placeholder="Ctrl+Enter to break line"></textarea>
 			  </div>
-			  <div class="form-group visible-xs-block form-inline">
+			</form>
+			<form class="message-creator visible-xs-block form-inline" ng-controller="MessageCreatorCtrl">
+			  <div class="form-group">
 			    <input type="text" required class="form-control message-input" ng-model="newMessage" placeholder="message here" />
-				<button class="btn btn-primary " onclick="createMessage()">send</button>
+				<button class="btn btn-primary" onclick="createMessage()">send</button>
 			  </div>
 			</form>
 		  </div>
