--- a/public/index.html
+++ b/public/index.html
@@ -30,17 +30,17 @@
     <script src="/renders/angular-moment/angular-moment.min.js"></script>
   </head>
   <body>
-  	<nav class="navbar navbar-inverse navbar-fixed-top">
+  	<nav class="navbar navbar-inverse navbar-fixed-top hidden-xs">
 	  <div class="container">
 		<div class="navbar-header">
 		  <a class="navbar-brand" href="#">Ace IM</a>
 		</div>
 	  </div>
 	</nav>
-	<div class="container-fluid" style="margin-top:100px">
-	  <div class="col-md-8 col-sm-10 col-md-offset-2 col-sm-offset-1">
+	<div class="container-fluid hidden-xs" style="margin-top:100px">
+	  <div class="col-md-8 col-sm-12 col-md-offset-2">
 		<div class="panel panel-default room" ng-controller="RoomCtrl">
-		  <div class="panel-heading room-header">
+		  <div class="panel-heading room-header hidden-xs">
 			<h3 class="panel-title">Ace IM</h3>
 		  </div>
 		  <div class="panel-body room-content">
@@ -50,15 +50,10 @@
 				<pre>{{message.content}}</pre>
 			  </div>
 			</div>
-			<form class="message-creator hidden-xs" ng-controller="MessageCreatorCtrl">
+			<form class="message-creator" ng-controller="MessageCreatorCtrl">
 			  <div class="form-group">
 			    <textarea required class="form-control message-input" ng-model="newMessage" ctrl-enter-break-line="createMessage()" placeholder="Ctrl+Enter to break line"></textarea>
-			  </div>
-			</form>
-			<form class="message-creator visible-xs-block form-inline" ng-controller="MessageCreatorMCtrl">
-			  <div class="form-group">
-			    <input type="text" required class="form-control message-input" ng-model="newMessageM" placeholder="message here" />
-				<button class="btn btn-primary" onclick="createMessage()">send</button>
+				<button class="btn btn-block btn-primary" onclick="createMessage()">send</button>
 			  </div>
 			</form>
 		  </div>
