--- a/public/index.html
+++ b/public/index.html
@@ -30,14 +30,14 @@
     <script src="/renders/angular-moment/angular-moment.min.js"></script>
   </head>
   <body>
-  	<nav class="navbar navbar-inverse navbar-fixed-top hidden-xs">
+  	<nav class="navbar navbar-inverse navbar-static-top hidden-xs">
 	  <div class="container">
 		<div class="navbar-header">
 		  <a class="navbar-brand" href="#">Ace IM</a>
 		</div>
 	  </div>
 	</nav>
-	<div class="container-fluid" style="margin-top:100px">
+	<div class="container-fluid" style="margin-top:50px">
 	  <div class="col-md-8 col-sm-12 col-md-offset-2">
 		<div class="panel panel-default room" ng-controller="RoomCtrl">
 		  <div class="panel-heading room-header hidden-xs">
