--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,8 @@
 		</div>
 	  </div>
 	</nav>
-	<div class="container-fluid" style="margin-top:50px">
+	<div style="min-height: 50px" class="hidden-xs"></div>
+	<div class="container-fluid">
 	  <div class="col-md-8 col-sm-12 col-md-offset-2">
 		<div class="panel panel-default room" ng-controller="RoomCtrl">
 		  <div class="panel-heading room-header hidden-xs">
@@ -53,7 +54,7 @@
 			<form class="message-creator" ng-controller="MessageCreatorCtrl">
 			  <div class="form-group">
 			    <textarea required class="form-control message-input" ng-model="newMessage" ctrl-enter-break-line="createMessage()" placeholder="Ctrl+Enter to break line"></textarea>
-				<button class="btn btn-block btn-primary visible-xs-block" ng-click="createMessage()">send</button>
+				<button style="margin-top:10px;" type="submit" class="btn btn-block btn-primary visible-xs-block" ng-click="createMessage()">send</button>
 			  </div>
 			</form>
 		  </div>
