--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,11 @@
 		</div>
 	  </div>
 	</div>
+	<audio preload="true">
+	  <source src="/assets/sms.ogg" type="audio/ogg">
+	  <source src="/assets/sms.mp3" type="audio/mpeg">
+	  Your browser does not support the audio tag.
+	</audio>
     <script src="/assets/aim.js"></script>
   </body>
 </html>
