--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <script src="/renders/angular/angular.min.js"></script>
     <script src="/renders/moment/moment.js"></script>
     <script src="/renders/angular-moment/angular-moment.min.js"></script>
+	<script src="/renders/soundmaster/soundmaster.min.js"></script>
   </head>
   <body>
   	<nav class="navbar navbar-inverse navbar-static-top hidden-xs">
@@ -62,11 +63,6 @@
 		</div>
 	  </div>
 	</div>
-	<audio preload="true">
-	  <source src="/assets/sms.ogg" type="audio/ogg">
-	  <source src="/assets/sms.mp3" type="audio/mpeg">
-	  Your browser does not support the audio tag.
-	</audio>
     <script src="/assets/aim.js"></script>
   </body>
 </html>
