--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
     <![endif]-->
     <script src="/socket.io/socket.io.js"></script>
     <link href="/assets/room.css" rel="stylesheet">
-    <link href="/assets/room.css" rel="stylesheet">
-
+	<link href="http://cdn.staticfile.org/emoji/0.2.2/emoji.css" rel="stylesheet" type="text/css" />
+	
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/renders/jquery/dist/jquery.min.js"></script>
     <script src="/renders/jquery/dist/jquery.cookie.js"></script>
@@ -66,11 +66,6 @@
 	  </div>
 	</div>
     <script src="/assets/aim.js"></script>
-    <script src="/renders/emoji.js"></script>
-    <script src="/renders/jquery.emoji.js"></script>
-	<script>
-		emoji.img_path = '/renders/emoji-data/unicode/';
-		emoji.init_env();
-	</script>
+	<script src="http://cdn.staticfile.org/emoji/0.2.2/emoji.js"></script>
   </body>
 </html>
