--- a/public/index.html
+++ b/public/index.html
@@ -32,43 +32,112 @@
 	<script src="/renders/soundmaster/soundmaster.min.js"></script>
   </head>
   <body>
-  	<nav class="navbar navbar-inverse navbar-static-top hidden-xs">
+  	<nav class="navbar navbar-inverse navbar-static-top hidden-xs hidden-sm">
 	  <div class="container">
 		<div class="navbar-header">
 		  <a class="navbar-brand" href="#">Ace IM</a>
 		</div>
 	  </div>
 	</nav>
-	<div style="min-height: 30px" class="hidden-xs"></div>
 	<div style="min-height: 10px"></div>
-	<div class="container-fluid">
-	  <div class="col-md-8 col-sm-12 col-md-offset-2">
-		<div class="panel panel-default room" ng-controller="RoomCtrl">
-		  <div class="panel-heading room-header hidden-xs">
+	<div class="container-fluid" ng-controller="RoomCtrl">
+	  <div class="col-md-2 hidden-sm hidden-xs col-md-offset-1">
+		<div class="list-group">
+			<p class="list-group-item list-group-item-info">Users</p>
+			<a class="list-group-item" ng-click="sendTo(user)" 
+				href="javascript:;" ng-class="{'list-group-item-success': share.me.id == user.id}"
+				ng-repeat="user in share.users track by user.id">{{user.nick}}</a>
+		</div>
+	  </div>
+	  <div class="col-md-8 hidden-xs hidden-sm">
+		<div class="panel panel-default room">
+		  <div class="panel-heading room-header">
 			<h3 class="panel-title">Ace IM</h3>
 		  </div>
 		  <div class="panel-body room-content">
 			<div class="messages list-group ng-cloak" auto-scroll-to-bottom ng-cloak>
-			  <div class="list-group-item message" ng-repeat="message in share.messages track by $index">
-			    <p><kbd>{{message.from}}:</kbd><span am-time-ago="message.createAt" class="pull-right"></span></p>
-				<pre x-convert-emoji></pre>
+			  <div class="list-group-item bubble" 
+				ng-class="{'bubble-left': message.from.id != share.me.id, 
+					'bubble-right': message.from.id == share.me.id, 
+					'private': message.to.id == share.me.id}" 
+				ng-repeat="message in share.messages track by $index">
+				<p>
+					<span class="label label-default" ng-class="{'pull-right': message.from == share.me}">
+						{{message.from.nick}}
+						<span ng-if="message.to.id == share.me.id">says privately</span>
+					</span>
+					<span am-time-ago="message.createAt" 
+						ng-class="{'pull-right': message.from != share.me}"></span>
+				</p>
+				<pre x-convert-emoji ng-class="{'text-right': message.from == share.me}"></pre>
 			  </div>
 			</div>
-			<form class="message-creator" ng-controller="MessageCreatorCtrl">
+			<form class="message-creator col-xs-12" ng-controller="MessageCreatorCtrl">
 			  <div class="form-group">
-			    <textarea class="form-control message-input" ng-model="newMessage" ctrl-enter-break-line="createMessage()" placeholder="Ctrl+Enter to break line"></textarea>
-				<button style="margin-top:10px;" type="submit" class="btn btn-block btn-primary visible-xs-block" ng-click="createMessage()">send</button>
+				<div class="input-group">
+					<div class="input-group-btn">
+						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">to {{share.target.nick}} </button>
+						<ul class="dropdown-menu" role="menu">
+						  <li><a ng-click="sendTo(share.all)" href="javascript:;" >all</a></li>
+						  <li class="divider" ng-if="share.users.length > 1"></li>
+						  <li ng-repeat="user in share.users track by user.id">
+							<a ng-click="sendTo(user)" href="javascript:;" ng-if="share.me.id != user.id">{{user.nick}}</a>
+						  </li>
+						</ul>
+					</div>
+					<input type="text" class="form-control message-input" ng-model="newMessage" ctrl-enter-break-line="createMessage()" placeholder="Enter to quick send">
+					<span class="input-group-btn">
+						<button type="submit" class="btn btn-block btn-primary" ng-click="createMessage()">send</button>
+					</span>
+				</div>
 			  </div>
 			</form>
 		  </div>
 		</div>
 	  </div>
+	  
+	  <div class="hidden-md hidden-lg">
+		<div class="messages list-group ng-cloak" auto-scroll-to-bottom ng-cloak>
+		  <div class="list-group-item bubble" 
+			ng-class="{'bubble-left': message.from.id != share.me.id, 
+				'bubble-right': message.from.id == share.me.id, 
+				'private': message.to.id == share.me.id}" 
+			ng-repeat="message in share.messages track by $index">
+			<p>
+				<span class="label label-default" ng-class="{'pull-right': message.from == share.me}">
+					{{message.from.nick}}
+					<span ng-if="message.to.id == share.me.id">says privately</span>
+				</span>
+				<span am-time-ago="message.createAt" 
+					ng-class="{'pull-right': message.from != share.me}"></span>
+			</p>
+			<pre x-convert-emoji ng-class="{'text-right': message.from == share.me}"></pre>
+		  </div>
+		</div>
+		<hr>
+		<form class="message-creator col-xs-12" ng-controller="MessageCreatorCtrl">
+		  <div class="form-group">
+			<div class="input-group">
+				<div class="input-group-btn">
+					<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">to {{share.target.nick}} </button>
+					<ul class="dropdown-menu" role="menu">
+					  <li><a ng-click="sendTo(share.all)" href="javascript:;" >all</a></li>
+					  <li class="divider" ng-if="share.users.length > 1"></li>
+					  <li ng-repeat="user in share.users track by user.id">
+						<a ng-click="sendTo(user)" href="javascript:;" ng-if="share.me.id != user.id">{{user.nick}}</a>
+					  </li>
+					</ul>
+				</div>
+				<input type="text" class="form-control message-input" ng-model="newMessage" ctrl-enter-break-line="createMessage()" placeholder="Enter to quick send">
+				<span class="input-group-btn">
+					<button type="submit" class="btn btn-block btn-primary" ng-click="createMessage()">send</button>
+				</span>
+			</div>
+		  </div>
+		</form>
 	</div>
     <script src="/assets/aim.js"></script>
     <script src="/renders/emoji.js"></script>
     <script src="/renders/jquery.emoji.js"></script>
-	<script>
-		emoji.img_path = '/renders/emoji-data/unicode/';
-	</script>
   </body>
 </html>
