--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 	  <div class="col-md-8 hidden-xs hidden-sm">
 		<div class="panel panel-default room">
 		  <div class="panel-heading room-header">
-			<h3 class="panel-title">Ace IM</h3>
+			<h3 class="panel-title">Dialog</h3>
 		  </div>
 		  <div class="panel-body room-content">
 			<div class="messages list-group ng-cloak" auto-scroll-to-bottom ng-cloak>
