--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 				<div class="input-group">
 					<div class="input-group-btn">
 						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">to {{share.target.nick}} </button>
-						<ul class="dropdown-menu" role="menu">
+						<ul class="dropdown-menu dropup" role="menu">
 						  <li><a ng-click="sendTo(share.all)" href="javascript:;" >all</a></li>
 						  <li class="divider" ng-if="share.users.length > 1"></li>
 						  <li ng-repeat="user in share.users track by user.id">
@@ -120,7 +120,7 @@
 			<div class="input-group">
 				<div class="input-group-btn">
 					<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">to {{share.target.nick}} </button>
-					<ul class="dropdown-menu" role="menu">
+					<ul class="dropdown-menu dropup" role="menu">
 					  <li><a ng-click="sendTo(share.all)" href="javascript:;" >all</a></li>
 					  <li class="divider" ng-if="share.users.length > 1"></li>
 					  <li ng-repeat="user in share.users track by user.id">
