--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,8 @@
 			  <div class="list-group-item bubble" 
 				ng-class="{'bubble-left': message.from.id != share.me.id, 
 					'bubble-right': message.from.id == share.me.id, 
-					'private': message.to.id == share.me.id}" 
+					'private': message.to.id == share.me.id || 
+						(message.to.id != share.all.id && message.from.id == share.me.id)}" 
 				ng-repeat="message in share.messages track by $index">
 				<p>
 					<span class="label label-default" ng-class="{'pull-right': message.from == share.me}">
