--- a/public/messageList.html
+++ b/public/messageList.html
@@ -2,11 +2,14 @@
 	<div class="list-group-item" ng-if="base.fetching">
 		<i class="fa fa-spin fa-spinner"></i> <span type-me data-text="fetching messages..."></span>
 	</div>
-	<div class="list-group-item text-center hidden-md hidden-lg" ng-if="!base.fetching" ng-click="fetchMore()">
+	<div class="list-group-item" ng-if="base.fetchEnd">
+		<i class="fa fa-close"></i> <span type-me data-text="no more messages"></span>
+	</div>
+	<div class="list-group-item text-center hidden-md hidden-lg" ng-if="base.canFetch && !base.fetching" ng-click="fetchMore()">
 		<i class="fa fa-"></i> load more chat history
 	</div>
-	<div style="min-height:10px" class="hidden-md hidden-lg" ng-if="!base.fetching"></div>
-	<div style="min-height:10px" ng-if="base.fetching"></div>
+	<div style="min-height:10px" class="hidden-md hidden-lg" ng-if="base.canFetch && !base.fetching"></div>
+	<div style="min-height:10px" ng-if="base.fetchEnd || base.fetching"></div>
 	<div class="list-group-item bubble bubble-left">
 		<p>
 			<span class="label label-default">
