--- a/public/room.html
+++ b/public/room.html
@@ -3,15 +3,13 @@
 		<div class="navbar-header">
 			<a class="navbar-brand" href="javascript:void(0)">Ace IM</a>
 		</div>
-		
 		<ul class="nav navbar-nav navbar-right">
-			
 			<li class="dropdown">
 				<a href="javascript:void(0)" class="dropdown-toggle ng-cloak" data-toggle="dropdown" role="button">
 					{{user.name}} <span class="caret"></span>
 				</a>
 				<ul class="dropdown-menu">
-					<li><a href="javascript:void(0)">Prefrences</a></li>
+					<li><a href="#" data-toggle="modal" data-target="#mdlPreferences">Prefrences</a></li>
 					<li><a href="javascript:void(0)" ng-click="switch()">Switch User</a></li>
 					<li><a href="javascript:void(0)" ng-click="logoff()">Logoff</a></li>
 				</ul>
@@ -44,11 +42,45 @@
 			</div>
 		</div>
 	</div>
-	
 	<div class="hidden-md hidden-lg" onresize="$(window).resize();">
 		<div style="min-height:10px"></div>
 		<message-list></message-list>
 		<hr>
 		<message-creator></message-creator>
+	</div>
+	
+	<div class="modal fade" id="mdlPreferences" tabindex="-1" role="dialog" data-backdrop="static">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Preferences</h4>
+				</div>
+				<div class="modal-body">
+					<form class="form-horizontal">
+						<div class="form-group">
+							<label class="col-sm-2 control-label" for="theme">Theme</label>
+							<div class="col-sm-10">
+								<select name="theme" class="form-control" ng-model="pref.theme" ng-options="name as name for (name, theme) in themes">
+								</select>
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-sm-offset-2 col-sm-10">
+								<div class="checkbox">
+									<label>
+										<input type="checkbox" ng-model="pref.roam"> Roaming my preferences
+									</label>
+								</div>
+							</div>
+						</div>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal" style="width: 15%" ng-click="savePreferences()">
+						<i class="fa fa-check"></i>
+					</button>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
