--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
 	</table>
 	<ng-include src="'room.html'" ng-if="user"></ng-include>
 	<ng-include src="'account.html'" ng-if="!user"></ng-include>
+	<script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="lib/jquery-1.11.3.min.js"></script>
