--- a/public/room.html
+++ b/public/room.html
@@ -68,6 +68,15 @@
 							<div class="col-sm-offset-2 col-sm-10">
 								<div class="checkbox">
 									<label>
+										<input type="checkbox" ng-model="pref.alarm"> New message alerts (sound)
+									</label>
+								</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-sm-offset-2 col-sm-10">
+								<div class="checkbox">
+									<label>
 										<input type="checkbox" ng-model="pref.roam"> Roaming my preferences
 									</label>
 								</div>
