--- a/public/room.html
+++ b/public/room.html
@@ -60,7 +60,14 @@
 						<div class="form-group">
 							<label class="col-sm-2 control-label" for="theme">Theme</label>
 							<div class="col-sm-10">
-								<select name="theme" class="form-control" ng-model="pref.theme" ng-options="name as name for (name, theme) in themes">
+								<select id="theme" class="form-control" ng-model="pref.theme" ng-options="name as name for (name, theme) in themes">
+								</select>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="col-sm-2 control-label" for="theme">Emoji style</label>
+							<div class="col-sm-10">
+								<select id="emoji" class="form-control" ng-model="pref.emoji" ng-options="name as name for name in emojiStyles">
 								</select>
 							</div>
 						</div>
