--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,15 @@
 	<base href="/">
 
 	<!-- Bootstrap -->
-	<link href="lib/bootstrap.min.css" rel="stylesheet">
+	<link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
-		<script src="lib/html5shiv.min.js"></script>
-		<script src="lib/respond.min.js"></script>
+		<script src="//cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		<script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-	<link href="lib/font-awesome.min.css" rel="stylesheet">
+	<link href="//cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="lib/emoji.css" rel="stylesheet">
 	<link href="app/room.css" rel="stylesheet">
 </head>
@@ -35,19 +35,18 @@
 	<ng-include src="'room.html'" ng-if="user"></ng-include>
 	<ng-include src="'account.html'" ng-if="!user"></ng-include>
 	<script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
-	<script src="/socket.io/socket.io.js"></script>
+	<script src="//cdn.bootcss.com/socket.io/1.3.7/socket.io.min.js"></script>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="lib/jquery-1.11.3.min.js"></script>
-	<script src="lib/jquery.cookie.js"></script>
+	<script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+	<script src="//cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="lib/bootstrap.min.js"></script>
-	<script src="lib/angular.min.js"></script>
-	<script src="lib/moment.min.js"></script>
-	<script src="lib/angular-moment.min.js"></script>
-	<script src="lib/soundmaster.min.js"></script>
+	<script src="//cdn.bootcss.com/socket.io/1.3.7/socket.io.min.js"></script>
+	<script src="//cdn.bootcss.com/angular.js/1.4.7/i18n/angular-locale_aa-dj.js"></script>
+	<script src="//cdn.bootcss.com/moment.js/2.10.6/moment.min.js"></script>
+	<script src="//cdn.bootcss.com/angular-moment/0.10.3/angular-moment.min.js"></script>
+	<script src="//cdn.bootcss.com/soundmanager2/2.97a.20150601/script/soundmanager2-jsmin.js"></script>
 	<script src="lib/emoji.js"></script>
-	<script src="lib/jquery.emoji.js"></script>
-	<script src="lib/jquery.ba-resize.min.js"></script>
+	<script src="//cdn.bootcss.com/jquery-resize/1.1/jquery.ba-resize.min.js"></script>
 	<script src="lib/mousewheel.js"></script>
 	<script src="app/init.js"></script>
 	<script src="app/malarkey.js"></script>
