fix(cdn): wrong address used

--- a/public/index.html
+++ b/public/index.html
@@ -41,10 +41,10 @@
 	<script src="//cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="//cdn.bootcss.com/socket.io/1.3.7/socket.io.min.js"></script>
-	<script src="//cdn.bootcss.com/angular.js/1.4.7/i18n/angular-locale_aa-dj.js"></script>
+	<script src="//cdn.bootcss.com/angular.js/1.4.7/angular.min.js"></script>
 	<script src="//cdn.bootcss.com/moment.js/2.10.6/moment.min.js"></script>
 	<script src="//cdn.bootcss.com/angular-moment/0.10.3/angular-moment.min.js"></script>
-	<script src="//cdn.bootcss.com/soundmanager2/2.97a.20150601/script/soundmanager2-jsmin.js"></script>
+	<script src="//cdn.bootcss.com/soundmanager2/2.97a.20150601/script/soundmanager2-nodebug-jsmin.js"></script>
 	<script src="lib/emoji.js"></script>
 	<script src="//cdn.bootcss.com/jquery-resize/1.1/jquery.ba-resize.min.js"></script>
 	<script src="lib/mousewheel.js"></script>
