--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
 	<ng-include src="'account.html'" ng-if="!user"></ng-include>
 	<script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
 	<script src="//cdn.bootcss.com/socket.io/1.3.7/socket.io.min.js"></script>
+	<script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
 	<script src="//cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
